--- a/user/Profile.html
+++ b/user/Profile.html
@@ -6,11 +6,11 @@
 <div align = "center">
 <h1>Users profile</h1>
 <div align = "right">
-<a target = "_self" href = "D:/WebSite/HomePage.html" title = "—сылка">Log out</a>
+<a target = "_self" href = "/HomePage.html" title = "—сылка">Log out</a>
 <br>
-<a target = "_self" href = "change_pass.html" title = "—сылка">Change password</a>
+<a target = "_self" href = "/user/change_pass.html" title = "—сылка">Change password</a>
 <br>
-<a target = "_self" href = "edit_profile.html" title = "—сылка">Edit profile</a>
+<a target = "_self" href = "/user/edit_profile.html" title = "—сылка">Edit profile</a>
 </div>
 
 </div>
