Add reviewer comments

--- a/HomePage.html
+++ b/HomePage.html
@@ -13,9 +13,11 @@ Your pass &nbsp<input type = "password" name = "password" value = "user_pass">
 <input type = "submit" value = "enter">&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 <input type = "button" name = "back to profile" value = "back">
 </form>
-<a target = "_self" href = "contacts/contacts.html" title = "Ссылка">Contacts</a>
-<a target = "_self" href = "about.html" title = "Ссылка">About</a>
-<a target = "_self" href = "user/profile.html" title = "Ссылка">link to profile</a>
+    <!--FIXME set project encoding to UTF-8-->
+    <!--FIXME why do you use target and title?-->
+<a target = "_self" href = "contacts/contacts.html" title = "пїЅпїЅпїЅпїЅпїЅпїЅ">Contacts</a>
+<a target = "_self" href = "about.html" title = "пїЅпїЅпїЅпїЅпїЅпїЅ">About</a>
+<a target = "_self" href = "user/profile.html" title = "пїЅпїЅпїЅпїЅпїЅпїЅ">link to profile</a>
 </div>
 </BODY>
 </HTML>
