Add reviewer comments

--- a/About.html
+++ b/About.html
@@ -1,3 +1,4 @@
+<!--fixme format all html-->
 <HTML>
 <HEAD>
 <TITLE>HomePage</TITLE>
@@ -6,7 +7,7 @@
 <div align = "center">
 <h1>About Us</h1>
 <h2>There should be some information about us but we have nothing to share so go home</h2>
-<a target = "_self" href = "HomePage.html" title = "Ссылка">Home</a>
+<a target = "_self" href = "HomePage.html" title = "пїЅпїЅпїЅпїЅпїЅпїЅ">Home</a>
 </div>
 </BODY>
 </HTML>
