Changed link "HomePage.html" into "/homepage.html"

--- a/contacts/contacts.html
+++ b/contacts/contacts.html
@@ -6,7 +6,7 @@
 <div align = "center">
 <h1>Contacts</h1>
 <h2>bla-bla contact us</h2>
-<a target = "_self" href = "HomePage.html" title = "—сылка">Home</a>
+<a target = "_self" href = "/homepage.html" title = "—сылка">Home</a>
 </div>
 </BODY>
 </HTML>
